fix: Insert missing background-color property
There is no CSS property on this line. Guessing to should be background-color.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -612,7 +612,7 @@ strong, b {
 .post--content p > code {
   font-size: 1rem;
   padding: 0 5px;
-  rgba(127,127,127,.1);
+  background-color: rgba(127,127,127,.1);
 }
 .post--content > pre {
   padding: 20px;
